tests/golden/snapshots/render_account__account_file_empty_fields.snap
---
source: tests/golden/render_account.rs
expression: out
---
// === sunscreen:auto-generated:begin segment=file version=1 generator=account ===
use anchor_lang::prelude::*;

#[account]
pub struct Marker {
}
// === sunscreen:auto-generated:end segment=file ===
