tests/golden/snapshots/render_account__account_file_pascal_case_normalization.snap
---
source: tests/golden/render_account.rs
expression: out
---
// === sunscreen:auto-generated:begin segment=file version=1 generator=account ===
use anchor_lang::prelude::*;

#[account]
pub struct UserProfile {
    pub level: u32,
}
// === sunscreen:auto-generated:end segment=file ===
