tests/golden/snapshots/render_account__account_file_vault_basic.snap
---
source: tests/golden/render_account.rs
expression: out
---
// === sunscreen:auto-generated:begin segment=file version=1 generator=account ===
use anchor_lang::prelude::*;

#[account]
pub struct Vault {
    pub owner: Pubkey,
    pub total: u64,
}
// === sunscreen:auto-generated:end segment=file ===
