tests/golden/snapshots/render_account__account_mod_segment_many_sorted_dedup.snap
---
source: tests/golden/render_account.rs
expression: out
---
pub mod audit_log;
pub use audit_log::*;
pub mod treasury;
pub use treasury::*;
pub mod user_profile;
pub use user_profile::*;
pub mod vault;
pub use vault::*;
